fixed logo is too big on the user login/sign up page

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -56,4 +56,5 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    height: 40px;
 }
